WIP - add qradar to security workshop
Signed-off-by: Adam Miller <admiller@redhat.com>

--- a/provisioner/roles/manage_ec2_instances/templates/instructor_inventory_security.j2
+++ b/provisioner/roles/manage_ec2_instances/templates/instructor_inventory_security.j2
@@ -10,11 +10,20 @@ ansible_port={{ ssh_port }}
 {{host.tags.Student}}-ansible ansible_host={{ host.public_ip_address }} ansible_user={{ host.tags.username }}
 {% endif %}
 {% endfor %}
+{% if security_console == 'splunk' %}
 {% for host in splunk_node_facts.instances %}
 {% if 'student' ~ number == host.tags.Student %}
 {{host.tags.Student}}-splunk ansible_host={{ host.public_ip_address }} ansible_user=admin
 {% endif %}
 {% endfor %}
+{% endif %}
+{% if security_console == 'qradar' %}
+{% for host in qradar_node_facts.instances %}
+{% if 'student' ~ number == host.tags.Student %}
+{{host.tags.Student}}-qradar ansible_host={{ host.public_ip_address }} ansible_user=admin
+{% endif %}
+{% endfor %}
+{% endif %}
 {% for host in snort_node_facts.instances %}
 {% if 'student' ~ number == host.tags.Student %}
 {{host.tags.Student}}-snort ansible_host={{ host.public_ip_address }} ansible_user={{ host.tags.username }}
