--- a/provisioner/roles/manage_ec2_instances/templates/security_instances.txt.j2
+++ b/provisioner/roles/manage_ec2_instances/templates/security_instances.txt.j2
@@ -13,11 +13,20 @@ ansible ansible_host={{ vm.public_ip_address }} ansible_user={{ vm.tags.username
 {% endfor %}
 
 [siem]
+{% if security_console == 'splunk' %}
 {% for vm in splunk_node_facts.instances %}
 {% if 'student' + item == vm.tags.Student %}
-splunk ansible_host={{ vm.public_ip_address }} ansible_user=admin private_ip={{ vm.private_ip_address }} ansible_ssh_pass=admin
+splunk ansible_host={{ vm.public_ip_address }} ansible_user=admin private_ip={{ vm.private_ip_address }} ansible_httpapi_pass="Ansible1!" ansible_connection=httpapi ansible_httpapi_use_ssl=yes ansible_httpapi_validate_certs=False ansible_network_os=splunk.enterprise_security.splunk
 {% endif %}
 {% endfor %}
+{% endif %}
+{% if security_console == 'qradar' %}
+{% for vm in qradar_node_facts.instances %}
+{% if 'student' + item == vm.tags.Student %}
+qradar ansible_host={{ vm.public_ip_address }} ansible_user=admin private_ip={{ vm.private_ip_address }} ansible_httpapi_pass="Ansible1!" ansible_connection=httpapi ansible_httpapi_use_ssl=yes ansible_httpapi_validate_certs=False ansible_network_os=ibm.qradar.qradar
+{% endif %}
+{% endfor %}
+{% endif %}
 
 [ids]
 {% for vm in snort_node_facts.instances %}
@@ -36,6 +45,6 @@ checkpoint ansible_host={{ vm.public_ip_address }} ansible_user={{ vm.tags.usern
 [windows]
 {% for vm in windows_node_facts.instances %}
 {% if 'student' + item == vm.tags.Student %}
-windows-ws ansible_host={{ vm.public_ip_address }} ansible_user={{ vm.tags.username }} ansible_pass={{ windows_password}} ansible_port=5986 ansible_connection=winrm ansible_winrm_server_cert_validation=ignore private_ip={{ vm.private_ip_address }} 
+windows-ws ansible_host={{ vm.public_ip_address }} ansible_user={{ vm.tags.username }} ansible_pass={{ windows_password}} ansible_port=5986 ansible_connection=winrm ansible_winrm_server_cert_validation=ignore private_ip={{ vm.private_ip_address }}
 {% endif %}
 {% endfor %}
