--- a/provisioner/roles/manage_ec2_instances/templates/security_instances.txt.j2
+++ b/provisioner/roles/manage_ec2_instances/templates/security_instances.txt.j2
@@ -23,7 +23,7 @@ attacker ansible_host={{ vm.public_ip_address }} ansible_user={{ vm.tags.usernam
 {% if security_console == 'splunk' %}
 {% for vm in splunk_node_facts.instances %}
 {% if 'student' + item == vm.tags.Student %}
-splunk ansible_host={{ vm.public_ip_address }} ansible_user=admin private_ip={{ hostvars[vm.tags.Name]['private_ip'] }} ansible_httpapi_pass="Ansible1!" ansible_connection=httpapi ansible_httpapi_use_ssl=yes ansible_httpapi_validate_certs=False ansible_network_os=splunk.enterprise_security.splunk
+splunk ansible_host={{ vm.public_ip_address }} ansible_user=ansible private_ip={{ vm.private_ip_address }} ansible_httpapi_pass="security" ansible_connection=httpapi ansible_httpapi_use_ssl=yes ansible_httpapi_validate_certs=False ansible_network_os=splunk.enterprise_security.splunk
 {% endif %}
 {% endfor %}
 {% endif %}
